# sentinel-project

./: AGENTS.md  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  monitor.py  users.py
app/core/: config.py  scheduler.py  security.py
app/core/checkers/: http_checker.py  registry.py
app/db/: database.py
app/models/: __init__.py  alert.py  monitor.py  user.py
app/schemas/: alert.py  auth.py  check_result.py  monitor.py  user.py
app/services/: auth_service.py  monitor_service.py  user_service.py
app/tests/: conftest.py
app/tests/api/: test_auth.py  test_monitors.py
migrations/: env.py
migrations/versions/: 15c30294740b_create_tables.py  41be98996712_fix_user_model_and_username.py  bd81f13b3fab_make_condition_nullable_or_remove_it.py  ca933fa4c425_init_db_with_users_plural.py  cb96f779441b_add_alert_model.py
sentinel-api/: .gitignore  README.md  docker-compose.yml
sentinel-api/app/: main.py
sentinel-api/app/api/: deps.py
sentinel-api/app/core/: config.py
sentinel-api/app/core/checkers/: base.py
sentinel-api/app/models/: check_result.py
sentinel-api/app/schemas/: alert.py  user.py
sentinel-api/app/services/: auth_service.py
sentinel-api/app/tests/: conftest.py
sentinel-api/app/tests/api/: test_auth.py  test_monitors.py
sentinel-api/migrations/versions/: ff4b8a2e0cb8_create_sentinel_core_tables.py
sentinel-worker/: go.mod
sentinel-worker/internal/config/: config.go
sentinel-worker/internal/models/: models.go
